Remove font smoothing to avoid blurry minimap

--- a/stylesheets/minimap.less
+++ b/stylesheets/minimap.less
@@ -52,6 +52,14 @@
     padding: 0 !important;
   }
 
+  .lines {
+    -webkit-font-smoothing: none;
+
+    &.hidden {
+      display: none;
+    }
+  }
+
   .line {
     opacity: .6;
   }
